Added actuator and some info descriptions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 pinholes = 4
 colors = 4
+
+## Configuring info endpoint
+info.app.name=MasterMind Application
+info.app.description=This is a REST application for playing mastermind games.
+info.app.version=1.0.0
+info.appp.name=test
