--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 pinholes = 4
 colors = 4
 
+server.port=8585
+
 ## Configuring info endpoint
 info.app.name=MasterMind Application
 info.app.description=This is a REST application for playing mastermind games.
