--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,9 @@
     <properties>
         <java.version>11</java.version>
         <junit.jupiter.version>5.5.2</junit.jupiter.version>
+        <start-class>eu.datagraphics.demo.DemoApplication</start-class>
     </properties>
-    
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
