H2 database with example service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,16 @@ colors = 4
 
 server.port=8585
 
+spring.datasource.initialization-mode=always
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=- 1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+
 ## Configuring info endpoint
 info.app.name=MasterMind Application
 info.app.description=This is a REST application for playing mastermind games.
 info.app.version=1.0.0
 info.appp.name=test
+
